- remove `HOST_EFFECTS` provider
- add `Effects` provider as a replacement for `effects()` and `HOST_EFFECTS`

=== Bug fixes

- fix typed metadata in effect adapters
- enforce return types when using effect adapters
- workaround for `InjectFlags.Self` (https://github.com/stupidawesome/ng-effects/issues/3)[#3])

=== Misc

- refactor effect explorer

=== BREAKING CHANGES

`effects()` is now only used to optionally configure default options. To run effects, provide the `Effects` token along with any other effect providers. Host effects only need the `Effects` token to run.

*Before*

[source, typescript]
----
@Component({
    providers: [effects([MyEffects, ...etc]), MyAdapter] // or [HOST_EFFECTS]
})
export class AppComponent {
    @Effect(MyAdapter)
    hostEffect() {}

    constructor(connect: Connect) {
        connect(this)
    }
}
----

*After*

[source, typescript]
----
@Component({
    providers: [Effects, MyEffects, MyAdapter, ...etc] // or [Effects]
})
export class AppComponent {
    @Effect(MyAdapter)
    hostEffect() {}

    constructor(connect: Connect) {
        connect(this)
    }
}
----

Only effects provided at the same level as the component or directive will be executed. Effects are not inherited from parent injectors and must be provided in every component that uses it.

== 9.0.0-rc.4

=== Features

- add paramater decorators for `State`, `Context` and `Observe`
- refactor effect types to support additional use cases

[source, typescript]
----
class AppEffects {
    @Effect()
    incrementCount(@Context() context: Context<AppState>) {}
}
----

=== Misc

- remove `latestFrom` and roll it into `changes`
- use proxy in prod if supported

== 9.0.0-rc.3

- export missing tokens and tweak defaults

The default value of `markDirty` will now be `true` if the effect configures a `bind` or `assign` option. This is a better default in most cases, and can be configured by setting `@Effect("prop", { markDirty: false })`.

== 9.0.0-rc.2

=== Features
